--- a/src/resources/css/themes/Black_nm/Chat.css
+++ b/src/resources/css/themes/Black_nm/Chat.css
@@ -21,6 +21,15 @@ ChatPanel #chatText:focus                   /* text input field focused */
 }
 
 
+/* connected users */
+ChatPanel QTreeWidget
+{
+    color: rgb(100, 100, 100);
+    selection-color: rgb(140, 140, 140);
+    selection-background-color: rgba(255, 255, 255, 15);
+}
+
+
 #topicLabel
 {
     color: gray;
