:gem: Public chat (#1001)
* Adding the Public Chat

* Keeping the chat in main window all the time

* Public chat working integrated with heroku

* Improving unreaded messages icon painting

* Showing connected users in public chat

* Allowing chat blocking in public chat

* Disallowing public messages with empty name

* Allowing server invitation

* Allowing server invitation when playin in ninjam servers too

* Allowing public chat on/off (close #1002)

--- a/src/resources/css/common/Chat.css
+++ b/src/resources/css/common/Chat.css
@@ -5,11 +5,21 @@
 
 /* Buttons used to auto translate and clear all chat messages
 --------------------------------------------------------------*/
-#buttonAutoTranslate,
-#buttonClear
+ChatPanel QPushButton:disabled
 {
-    max-height: 22px;
-    max-width: 14px;
+    border: none;
+    background: none;
+}
+
+#buttonAutoTranslate,
+#buttonClear,
+#buttonOnOff
+{
+    min-height: 20px;
+    max-height: 20px;
+    max-width: 20px;
+    padding: 0px;
+    margin: 0px;
 }
 
 #buttonClear
@@ -24,6 +34,8 @@
     background-image: url(:/images/translate.png);
     background-repeat: no-repeat;
     background-position: center;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 #topicLabel
