:art: Removing ugly background in Navy theme Scrollbars (VST/AU)

--- a/src/resources/css/themes/Navy_nm/General.css
+++ b/src/resources/css/themes/Navy_nm/General.css
@@ -259,7 +259,12 @@ QScrollBar::sub-line
   background: none;
 }
 
-
+/* removing ugly background in VST */
+QScrollBar::add-page,
+QScrollBar::sub-page
+{
+    background: none;
+}
 
 QMenu
 {
