--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -55,12 +55,25 @@ NinjamRoomWindow QToolButton:hover:checked
     background-color: rgba(255, 255, 255, 10);
 }
 
-
-
-NinjamRoomWindow QToolButton:checked
+#buttonVerticalLayout:checked,
+#buttonHorizontalLayout:checked,
+#buttonGridLayout:checked,
+#wide:checked,
+#narrow:checked
 {
     background-color: rgba(255, 255, 255, 60);
     border: 1px solid rgba(0, 0, 0, 100);
+}
+
+#buttonVerticalLayout:hover,
+#buttonHorizontalLayout:hover,
+#buttonGridLayout:hover,
+#wide:hover,
+#narrow:hover,
+#licenceButton:hover
+{
+    background-color: rgba(255, 255, 255, 120);
+    border: 1px solid rgba(0, 0, 0, 130);
 }
 
 
