Drawing meters inside groove rect

--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -109,7 +109,7 @@ QMenu::item::enabled:selected
 }
 
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(90, 90, 90);
