--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -357,7 +357,7 @@
              </widget>
             </item>
             <item alignment="Qt::AlignVCenter">
-             <widget class="Slider" name="masterFader">
+             <widget class="AudioSlider" name="masterFader">
               <property name="sizePolicy">
                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -700,7 +700,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>Slider</class>
+   <class>AudioSlider</class>
    <extends>QSlider</extends>
    <header>gui/widgets/Slider.h</header>
   </customwidget>
