--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -167,13 +167,11 @@ QSlider::groove:vertical
 QSlider::groove:horizontal
 {
     background-color: rgba(0, 0, 0, 50);
-    height: 2px;
     border: none;
 }
 QSlider::groove:vertical
 {
     background-color: rgba(0, 0, 0, 50);
-    width: 2px;
 }
 
 
@@ -254,7 +252,7 @@ QMenu
 }
 
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(150, 150, 150);
@@ -263,7 +261,7 @@ AudioMeter
     qproperty-maxPeakColor: rgb(150, 150, 150);
 }
 
-AudioMeter#masterMeter
+AudioSlider#masterFader
 {
     qproperty-maxPeakColor: rgb(120, 120, 120);
     qproperty-rmsColor: rgb(120, 120, 120);
