--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -111,7 +111,7 @@ used when xmit is off, and for remote tracks (ninjam tracks) this color is used 
 user is not transmiting.
 -----------------------------------------------------------------------------------*/
 
-BaseTrackView[unlighted="true"] BaseMeter
+BaseTrackView[unlighted="true"] AudioSlider
 {
     background-color: rgba(0, 0, 0, 15);
 }
