--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -109,6 +109,33 @@ QMenu::item::enabled:selected
 }
 
 
+
+QSlider::groove:vertical
+{
+    width: 13px;
+}
+
+QSlider::groove:horizontal
+{
+    height: 13px;
+}
+
+QSlider::handle:vertical
+{
+    margin-left: -4px;
+    margin-right: -4px;
+    padding: 0px;
+    height: 8px;
+    width: 18px;
+}
+
+QSlider::handle:horizontal
+{
+    margin-top: -4px;
+    margin-bottom: -4px;
+    width: 9px;
+}
+
 AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
@@ -118,6 +145,16 @@ AudioSlider
     qproperty-maxPeakColor: rgb(90, 90, 90);
 
     qproperty-drawSegments: true; /* By default all themes will draw segments in peak meters */
+}
+
+PanSlider::groove:horizontal
+{
+    height: 2px;
+}
+
+PanSlider::groove:vertical
+{
+    width: 2px;
 }
 
 #chatTabWidget QTabBar::tab:!selected
