--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -188,12 +188,12 @@ QSlider::groove:horizontal
 {
     border-radius: 2px;
     background-color: rgba(0, 0, 0, 50);
-    height: 3px;
+    /*height: 3px;*/
 }
 QSlider::groove:vertical
 {
     background-color: rgba(0, 0, 0, 50);
-    width: 5px;
+    /*width: 5px;*/
 }
 
 
