--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -98,7 +98,7 @@ BaseMeter
     background-color: rgba(0, 0, 0, 20);
 }
 
-AudioMeter
+AudioSlider
 {
     qproperty-dBMarksColor: black;
     border: 1px solid rgb(0, 0, 0, 30);
