--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -202,57 +202,39 @@ QLineEdit#chatText-topLevel
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
 
-QSlider::groove:vertical
-{
-    border: none;
-}
-
-QSlider::groove:horizontal
-{
-    background-color: rgba(0, 0, 0, 50);
-    border: none;
-}
-QSlider::groove:vertical
+QSlider::groove
 {
     background-color: rgba(0, 0, 0, 50);
 }
-
 
 QSlider::handle
 {
-
-background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-stop: 0.0 #FDE5A9,
-stop: 1.0 #FFB301);
-
     border: 1px outset #68300F;
     border-radius: 2px;
 }
 
+/* pan slider using solid background color */
+PanSlider::handle
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #FDE5A9,
+        stop: 1.0 #FFB301);
+}
+
 QSlider::handle:hover
 {
-background-color: #FDE5A9;
-}
-
-QSlider::handle:horizontal
-{
-    margin-top: -6px;
-    margin-bottom: -7px;
-    padding: 0px;
-    width: 8px;
-    height: 14px;
-}
-
-QSlider::handle:vertical
-{
-    margin-left: -9px;
-    margin-right: -9px;
-    padding: 0px;
-    height: 9px;
-    width: 24px;
+    background-color: #FDE5A9;
+    border: 1px outset #68300F;
 }
 
 
+/* transparent handle */
+AudioSlider::handle {
+
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+            stop: 0.0 rgba(253, 229, 169, 180),
+            stop: 1.0 rgba(255, 179, 1, 180));
+}
 
 
 /* TabBar ----------------------*/
