--- a/src/resources/css/themes/Navy_nm/General.css
+++ b/src/resources/css/themes/Navy_nm/General.css
@@ -141,7 +141,8 @@ BoostSpinBox QToolButton:!enabled:!checked
 QSlider::handle
 {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                stop: 0.0 rgba(115, 115, 115, 180), stop: 1.0 rgba(89, 89, 89, 180));
+                stop: 0.0 rgb(115, 115, 115),
+                stop: 1.0 rgb(89, 89, 89));
 }
 
 QSlider::handle:hover
@@ -158,29 +159,14 @@ MetronomePanel QSlider::groove:horizontal
     border-radius: 3px;
 }
 
-QSlider::groove:vertical
-{
-    width: 13px;
-}
-
-QSlider::groove:horizontal
-{
-    height: 13px;
-}
-
 QSlider::handle:vertical
 {
-    margin-left: -4px;
-    margin-right: -4px;
     padding: 0px;
     height: 8px;
-    width: 18px;
 }
 
 QSlider::handle:horizontal
 {
-    margin-top: -4px;
-    margin-bottom: -4px;
     width: 9px;
 }
 
