--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -261,7 +261,7 @@
              <x>0</x>
              <y>0</y>
              <width>960</width>
-             <height>318</height>
+             <height>320</height>
             </rect>
            </property>
           </widget>
@@ -293,7 +293,7 @@
         <number>24</number>
        </property>
        <property name="verticalSpacing">
-        <number>12</number>
+        <number>6</number>
        </property>
        <item row="0" column="0">
         <widget class="QFrame" name="masterControlsPanel">
@@ -311,7 +311,7 @@
          </property>
          <property name="maximumSize">
           <size>
-           <width>250</width>
+           <width>220</width>
            <height>16777215</height>
           </size>
          </property>
@@ -334,7 +334,7 @@
           <property name="bottomMargin">
            <number>0</number>
           </property>
-          <item alignment="Qt::AlignVCenter">
+          <item>
            <widget class="QLabel" name="masterTitleLabel">
             <property name="text">
              <string>master</string>
@@ -345,30 +345,26 @@
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="masterFaderLayout">
-            <item alignment="Qt::AlignVCenter">
-             <widget class="AudioSlider" name="masterFader">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="maximum">
-               <number>140</number>
-              </property>
-              <property name="singleStep">
-               <number>10</number>
-              </property>
-              <property name="value">
-               <number>100</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="AudioSlider" name="masterFader">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximum">
+             <number>140</number>
+            </property>
+            <property name="singleStep">
+             <number>10</number>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
