Fixing audio meter colors in Ice theme

--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -322,7 +322,7 @@ QTabWidget::pane
 
 
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(40, 90, 130);
